4-objects/2-default-gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
  namespace: istio-system
  annotations:
    metallb.universe.tf/address-pool: default-pool
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
    hostname: "*.fava.casa"
  - name: https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    hostname: "*.fava.casa"
    tls:
      mode: Terminate
      certificateRefs:
      - name: star-fava-casa-tls
        kind: Secret
