4-objects/5-argo-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: default-gateway
      namespace: istio-system
  hostnames:
    - "argocd.fava.casa"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: argocd-server
          port: 80
